# testprecommithook

./: .pre-commit-hooks.yaml  README.md  setup.cfg
.devcontainer/: devcontainer.json  postCreateScript.sh
print_arguments/: main.py
