# setup.cfg
[metadata]
name = print-arguments
description = print the arguments you pass
version = 0.1
author = Erik Whitesides
author_email = eklevjer@gmail.com
license = MIT
url = github.com/ewhitesides

[options]
packages = find:

[options.entry_points]
console_scripts =
    print-arguments = print_arguments.main:main
